removed submodule for glad

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,12 @@
 cmake_minimum_required(VERSION 3.11)
 
+include_directories(glad/include)
+
 link_directories(${CMAKE_BINARY_DIR})
 if(${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
 	set(CMAKE_CXX_FLAGS "-O2 -static-libgcc -static-libstdc++ -mwindows -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,-Bdynamic,--no-whole-archive")	
-	add_custom_target(
-		lib_glad
-		COMMAND cd lib/glad && mingw32-make
-	)
 else()
 	set(CMAKE_CXX_FLAGS "-O2 -static-libgcc -static-libstdc++")
-	add_custom_target(
-		lib_glad
-		COMMAND cd lib/glad && make
-	)
 endif()
 
 #project name
@@ -25,8 +19,6 @@ add_custom_target(
 	run
 	COMMAND ./${BIN_NAME}
 )
-
-add_subdirectory(lib/glad)
 
 find_package(OpenGL REQUIRED)
 
@@ -46,10 +38,9 @@ add_executable(
 	${event}
 	${gameobject}
 	${audio}
+	glad/src/glad.c
 )
 
-add_dependencies(${BIN_NAME} lib_glad)
 target_link_libraries(${BIN_NAME} glfw3)
 target_link_libraries(${BIN_NAME} SOIL2 OpenGL::GL)
 target_link_libraries(${BIN_NAME} openal sndfile)
-target_link_libraries(${BIN_NAME} ${CMAKE_BINARY_DIR}/lib/glad/libglad.a)
